--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "colors": "^1.4.0",
     "config": "^3.3.1",
+    "cors": "^2.8.5",
     "crypto-random-string": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
